# verifiable-fl

./: Cargo.toml  README.md
benches/: aggregator.rs  client_c.rs  client_v.rs  utils.rs
src/primitives/: mkhs.rs  mod.rs
src/system/: aggregator.rs  client.rs
src/util/: dataset.rs  mod.rs  serde.rs
