[package]
name = "verifiable-fl"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-ff = { version = "0.4.2", features = ["rayon"] }
ark-ec = "0.4.2"
ark-std = "0.4.0"
ark-serialize = "0.4.2"
ark-bls12-381 = "0.4.0"

#ark-ff = { version = "0.5", features = ["parallel", "asm"] }
#ark-ec = { version = "0.5", features = ["parallel"] }
#ark-std = { version = "0.5", features = ["parallel"] }
#ark-poly = { version = "0.5", features = ["parallel"] }
#ark-serialize = { version = "0.5", features = ["derive", "parallel", "std"] }
#ark-bls12-381 = { version = "0.5", features = ["curve", "scalar_field"] }

ed25519-dalek = { version = "2.1.1", features = ["default", "fast", "batch", "rand_core", "serde"] }

rand = "0.8.5"
num-bigint = "0.4.6"
num-traits = "0.2.19"
bigdecimal = "0.4.5"

rayon = "1.10"
anyhow = "1.0.89"
sha2 = "0.10.8"

bincode = "1.3.3"
lz4_flex = "0.11.3"
serde = { version = "1.0.219", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports", "plotters"] }

[[bench]]
name = "client_c"
harness = false
[[bench]]
name = "client_v"
harness = false
[[bench]]
name = "aggregator"
harness = false